--- a/templates/index.html
+++ b/templates/index.html
@@ -29,13 +29,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav me-auto">
-                <a class="nav-item nav-link" href="/">Home</a>
-                <a class="nav-item nav-link" href="/about">About</a>
+                <a class="nav-item nav-link" href="{{url_for('home') }}">Home</a>
+                <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav ms-auto">
-                <a class="nav-item nav-link" href="/login">Login</a>
-                <a class="nav-item nav-link" href="/register">Register</a>
+                <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
                 </div>
             </div>
             </div>
@@ -44,18 +44,29 @@
         <main role="main" class="container">
             <div class="row">
                 <div class="col-8">
-                    {% block content %}{% endblock  %}
+                {% with messages = get_flashed_messages(with_categories=True) %}
+                    {% if messages %}
+                        {% for category, message in messages %}
+                            <div class="alert alert-{{ category }}">
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    {%endif%}
+                {% endwith %}
+                {% block content %}{% endblock  %}
                 </div>
                 <div class="col-4">
+                <div class="content-section">
                     <h3>Our Sidebar</h3>
                     <p class="text-muted">Hello World
-                    <ul>
-                        <li>Latest Posts</li>
-                        <li>Announcements</li>
-                        <li>Calendars</li>
-                        <li>etc</li>
+                    <ul class="list-group">
+                        <li class="list-group-item list-group-item-action-light">Latest Posts</li>
+                        <li class="list-group-item list-group-item-light">Announcements</li>
+                        <li class="list-group-item list-group-item-light">Calendars</li>
+                        <li class="list-group-item list-group-item-light">etc</li>
                     </ul>
                     </p>
+                </div>
                 </div>
             </div>
         </main>
