--- a/flask_blog/templates/account.html
+++ b/flask_blog/templates/account.html
@@ -1,13 +1,53 @@
 {% extends "index.html" %}
 {% block content %}
 <div class="container border pt-3 ps-3">
+<div class="row row-cols-auto">
   <div class="media">
     <img class="rounded-circle account-img" src="{{ image_file }}">
+  </div>
     <div class="media-body">
       <h2 class="account-heading">{{ current_user.username }}</h2>
       <p class="text-secondary">{{ current_user.email }}</p>
     </div>
   </div>
-  <!-- FORM HERE -->
+        <form method="POST" action="" novalidate>
+            {{ form.hidden_tag() }}
+            <fieldset class="mb-3">
+                <legend class="border-bottom mb-4">Account Info</legend>
+                <div class="mb-3">
+                    {{ form.username.label(class="form-label") }}
+
+                    {% if form.username.errors %}
+                        {{ form.username(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                        {% for error in form.username.errors %}
+                            <span> {{ error }} </span>
+                        {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.username(class="form-control form-control-lg") }}
+                    {% endif %}
+
+                </div>
+                <div class="mb-3">
+                    {{ form.email.label(class="form-label") }}
+
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                        {% for error in form.email.errors %}
+                            <span> {{ error }} </span>
+                        {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="mb-3">
+                {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+
+        </form>
 </div>
 {% endblock content %}
