--- a/flask_blog/templates/account.html
+++ b/flask_blog/templates/account.html
@@ -10,7 +10,7 @@
       <p class="text-secondary">{{ current_user.email }}</p>
     </div>
   </div>
-        <form method="POST" action="" novalidate>
+        <form method="POST" action="" novalidate enctype="multipart/form-data">
             {{ form.hidden_tag() }}
             <fieldset class="mb-3">
                 <legend class="border-bottom mb-4">Account Info</legend>
@@ -43,7 +43,21 @@
                         {{ form.email(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
+                <div class="mb-3">
+                    <div class="my-2">
+                    {{ form.picture.label() }}
+                    </div>
+                    {{ form.picture(class="form-control-file")}}
+                    {% if form.picture.errors %}
+                        {% for error in form.picture.errors %}
+                            <div class="my-2">
+                            <span class="text-danger"> {{ error }} </span>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
+                </div>
             </fieldset>
+
             <div class="mb-3">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
