--- a/flask_blog/templates/post.html
+++ b/flask_blog/templates/post.html
@@ -9,6 +9,14 @@
                 <div class="article-metadata">
                     <a class="me-1" href="#">{{ post.author.username }}</a>
                     <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
+                    {% if post.author == current_user %}
+                        <div>
+                            <a class="btn btn-secondary btn-sm " href="{{ url_for('update_post',post_id=post.id) }}">Update</a>
+                            <button type="button" class="btn btn-danger btn-sm m-1"
+                            data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
+                        </div>
+
+                    {% endif %}
                 </div>
             
                 <h2 class="article-title">{{ post.title }}</h2>
@@ -16,5 +24,23 @@
             </div>
         </div>
     </article>
+    <!-- Modal -->
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+            <h1 class="modal-title fs-5" id="deleteModalLabel">Delete Post?</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <form action="{{ url_for('delete_post',post_id=post.id) }}" method="POST">
+                <input class="btn btn-danger" type="submit" value="Delete">
+            </form>
+        </div>
+        </div>
+    </div>
+    </div>
+
 
 {% endblock content %}
