--- a/flask_blog/templates/post.html
+++ b/flask_blog/templates/post.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-xs-7 ms-xs-2 media-body">
                 <div class="article-metadata">
-                    <a class="me-1" href="#">{{ post.author.username }}</a>
+                    <a class="me-1" href="{{ url_for('user_posts',username=post.author.username) }}">{{ post.author.username }}</a>
                     <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                     {% if post.author == current_user %}
                         <div>
