Fix: Corrected form typos.

--- a/flask_blog/templates/reset_token.html
+++ b/flask_blog/templates/reset_token.html
@@ -16,7 +16,7 @@
                         {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.email(class="form-control form-control-lg") }}
+                        {{ form.password(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
                 <div class="mb-3">
@@ -30,7 +30,7 @@
                         {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.email(class="form-control form-control-lg") }}
+                        {{ form.password(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
             </fieldset>
