--- a/flask_blog/templates/login.html
+++ b/flask_blog/templates/login.html
@@ -41,10 +41,10 @@
             </fieldset>
             <div class="mb-3">
                 {{ form.submit(class="btn btn-outline-info") }}
-            </div>
-            <small class="text-muted ms-2">
-                <a href="#">Forgot Password?</a>
+                            <small class="text-muted ms-2">
+                <a href="{{url_for('reset_request')}}">Forgot Password?</a>
             </small>
+            </div>
 
         </form>
     </div>
