--- a/flask_blog/templates/home.html
+++ b/flask_blog/templates/home.html
@@ -10,11 +10,11 @@
             </div>
             <div class="col-xs-7 ms-xs-2 media-body">
                 <div class="article-metadata">
-                <a class="me-1" href="{{ url_for('user_posts',username=post.author.username) }}">{{ post.author.username }}</a>
+                <a class="me-1" href="{{ url_for('users.user_posts',username=post.author.username) }}">{{ post.author.username }}</a>
                 <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                 </div>
             
-                <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+                <h2><a class="article-title" href="{{ url_for('posts.post', post_id=post.id) }}">{{ post.title }}</a></h2>
                 <p class="article-content">{{ post.content }}</p>
             </div>
             </div>
@@ -25,9 +25,9 @@
         {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=1) %}
             {% if page_num %}
                 {% if posts.page == page_num %}
-                    <a class="btn text-center btn-info mb-4 ms-1 me-1 " href="{{url_for('home',page=page_num)}}"> {{ page_num }}</a>
+                    <a class="btn text-center btn-info mb-4 ms-1 me-1 " href="{{url_for('main.home',page=page_num)}}"> {{ page_num }}</a>
                 {% else %}
-                <a class="btn text-center btn-outline-info mb-4 ms-1 me-1 " href="{{url_for('home',page=page_num)}}"> {{ page_num }}</a>
+                <a class="btn text-center btn-outline-info mb-4 ms-1 me-1 " href="{{url_for('main.home',page=page_num)}}"> {{ page_num }}</a>
                 {% endif %}
             {% else %}
                 ...
