--- a/flask_blog/templates/login.html
+++ b/flask_blog/templates/login.html
@@ -42,7 +42,7 @@
             <div class="mb-3">
                 {{ form.submit(class="btn btn-outline-info") }}
                             <small class="text-muted ms-2">
-                <a href="{{url_for('reset_request')}}">Forgot Password?</a>
+                <a href="{{url_for('users.reset_request')}}">Forgot Password?</a>
             </small>
             </div>
 
@@ -50,7 +50,7 @@
     </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-        Need an account? <a class="ms-2" href="{{ url_for('register')  }}">Register Now</a>
+        Need an account? <a class="ms-2" href="{{ url_for('users.register')  }}">Register Now</a>
         </small>
     </div>
 {% endblock content %}
