--- a/flask_blog/templates/post.html
+++ b/flask_blog/templates/post.html
@@ -7,11 +7,11 @@
             </div>
             <div class="col-xs-7 ms-xs-2 media-body">
                 <div class="article-metadata">
-                    <a class="me-1" href="{{ url_for('user_posts',username=post.author.username) }}">{{ post.author.username }}</a>
+                    <a class="me-1" href="{{ url_for('users.user_posts',username=post.author.username) }}">{{ post.author.username }}</a>
                     <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
                     {% if post.author == current_user %}
                         <div>
-                            <a class="btn btn-secondary btn-sm " href="{{ url_for('update_post',post_id=post.id) }}">Update</a>
+                            <a class="btn btn-secondary btn-sm " href="{{ url_for('posts.update_post',post_id=post.id) }}">Update</a>
                             <button type="button" class="btn btn-danger btn-sm m-1"
                             data-bs-toggle="modal" data-bs-target="#deleteModal">Delete</button>
                         </div>
@@ -34,7 +34,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <form action="{{ url_for('delete_post',post_id=post.id) }}" method="POST">
+            <form action="{{ url_for('posts.delete_post',post_id=post.id) }}" method="POST">
                 <input class="btn btn-danger" type="submit" value="Delete">
             </form>
         </div>
