--- a/flask_blog/templates/index.html
+++ b/flask_blog/templates/index.html
@@ -33,6 +33,7 @@
                 <div class="navbar-nav me-auto">
                 <a class="nav-item nav-link" href="{{url_for('main.home') }}">Home</a>
                 <a class="nav-item nav-link" href="{{ url_for('main.about') }}">About</a>
+                <a class="nav-item nav-link" href="{{ url_for('main.phonevalidation') }}">Phone Validation</a>
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav ms-auto">
